[package]
name = "platformer"
version = "0.1.0"
edition = "2024"

[dependencies]
aseprite = "0.1.3"
assets_manager = "0.12.5"
bevy_ecs = "0.15.3"
bson = "2.14.0"
criterion = "0.5.1"
env_logger = "0.11.7"
fetch-data = "0.2.0"
futures = "0.3.31"
glyphon = "0.9.0"
log = "0.4.26"
nalgebra = "0.33.2"
pollster = "0.4.0"
profiling = "1.0.16"
raui = "0.65.2"
rayon = "1.10.0"
rodio = "0.20.1"
spin_sleep = "1.3.1"
tiled = "0.14.0"
wgpu = "25.0.0"
winit = "0.30.9"
